@@ -3,6 +3,9 @@ Gaim: The Pimpin' Penguin IM Clone thats good for the soul!
 version 0.55:
 	* Better Jabber list management when using multiple
 	  resources (Thanks Jim Seymour)
+	* Various sound cleanups (Thanks Robert McQueen)
+	* Login process shown in single window (Thanks Michael 
+	  Golden)
 	
 version 0.54 (03/14/2002):
 	* Compiles without GdkPixbuf again
